--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "dx-omni-deploy",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "scripts": {
+    "start": "node deployServer.js"
   },
   "keywords": [],
   "author": "",
