--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dx-omni-deploy",
   "version": "1.0.0",
   "main": "index.js",
-   "scripts": {
+  "scripts": {
     "start": "node deployServer.js"
   },
   "keywords": [],
@@ -12,6 +12,6 @@
   "dependencies": {
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
-    "vlocity": "^1.17.13"
+    "vlocity": "github:vlocityinc/vlocity_build"
   }
 }
