--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "dx-omni-deploy",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "deployServer.js",
   "scripts": {
-  "start": "node deployServer.js",
-  "vlocity": "vlocity"
+    "start": "node deployServer.js"
   },
   "keywords": [],
   "author": "",
