--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "deployServer.js",
   "scripts": {
     "start": "node deployServer.js",
-    "postinstall": "npm install https://github.com/vlocityinc/vlocity_build"
+    "postinstall": "npm install https://github.com/vlocityinc/vlocity_build/archive/refs/heads/master.tar.gz"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "js-yaml": "^4.1.0"
   }
 }
