--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node deployServer.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "strip-ansi": "^7.1.0"
   }
 }
