--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node deployServer.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "fs-extra": "^11.3.0",
     "js-yaml": "^4.1.0",
+    "simple-git": "^3.28.0",
     "strip-ansi": "^7.1.0"
   }
 }
