--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs-extra": "^11.3.0",
     "js-yaml": "^4.1.0",
     "simple-git": "^3.28.0",
-    "strip-ansi": "^6.0.1"
+    "strip-ansi": "^6.0.1",
+    "xmlbuilder": "^15.1.1"
   }
 }
