--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "express": "^4.18.2",
     "fs-extra": "^11.3.0",
     "js-yaml": "^4.1.0",
+    "jsforce": "^3.9.1",
     "simple-git": "^3.28.0",
     "strip-ansi": "^6.0.1",
+    "xml2js": "^0.6.2",
     "xmlbuilder": "^15.1.1"
   }
 }
