--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node deployServer.js"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "fs-extra": "^11.3.0",
@@ -14,6 +14,7 @@
     "jsforce": "^3.9.1",
     "simple-git": "^3.28.0",
     "strip-ansi": "^6.0.1",
+    "tmp": "^0.2.3",
     "xml2js": "^0.6.2",
     "xmlbuilder": "^15.1.1"
   }
