--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node deployServer.js"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
