--- a/.env
+++ b/.env
@@ -23,9 +23,9 @@
 # GITLAB_TOKEN=glpat-3id_UzIC-3fSrqca52id1m86MQp1Omg5ZmloCw.01.120t8tmhw
 
 
-GIT_COMMIT_EMAIL=omni-deploy@tgs.com
-GIT_COMMIT_NAME=Omni Deployer
-CLOUD_RUN_URL=http://localhost:3000
+# GIT_COMMIT_EMAIL=omni-deploy@tgs.com
+# GIT_COMMIT_NAME=Omni Deployer
+# CLOUD_RUN_URL=http://localhost:3000
 
 
 # ---------------------------
