--- a/.env
+++ b/.env
@@ -41,7 +41,7 @@ SF_JWT_KEY=./server.key                      # Path to your private key in the c
 # ---------------------------
 TARGET_CLIENT_ID=3MVG9VMBZCsTL9hlO6E2akddwoJdt419G0N282zjPNjyFzlmAQH_RbZC82bEY6qoUgnGA0jpd_aD5lKe9d6yd
 TARGET_USERNAME=ssiddani@tgs.com
-TARGET_LOGIN_URL=https://test.salesforce.com  # Use sandbox login if deploying to sandbox
+TARGET_LOGIN_URL=https://login.salesforce.com # Use sandbox login if deploying to sandbox
 TARGET_JWT_KEY=./server.key                   # Or paste private key contents if stored in variable
 
 # ---------------------------
